--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,12 +27,10 @@ jobs:
       - name: Set up PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: "7.4"
+          php-version: "8.1"
 
       - name: Install Composer dependencies
-        run:
-          composer update --no-dev --no-interaction --prefer-dist --optimize-autoloader
-          composer install --no-dev --no-interaction --prefer-dist --optimize-autoloader
+        run: composer install --no-dev --no-interaction --prefer-dist --optimize-autoloader
 
       - name: Deploy to server
         env:
@@ -44,9 +42,8 @@ jobs:
           chmod 600 private_key
           rsync -avz -e "ssh -i private_key -o StrictHostKeyChecking=no" --exclude=node_modules --exclude=vendor . $SSH_USERNAME@$SSH_HOST:/ruta/destino
           ssh -i private_key -o StrictHostKeyChecking=no $SSH_USERNAME@$SSH_HOST << 'EOF'
-            cd /domains/moisespulido.com
+            cd /ruta/destino
             composer install --no-dev --no-interaction --prefer-dist --optimize-autoloader
-            php artisan migrate --force
             npm install
             npm run build
             php artisan config:cache
