--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,9 +39,10 @@ jobs:
           SSH_USERNAME: ${{ secrets.SSH_USERNAME }}
           SSH_PASSWORD: ${{ secrets.SSH_PASSWORD }}
         run: |
-          sshpass -p "$SSH_PASSWORD" rsync -avz -e "ssh -o StrictHostKeyChecking=no -p $SSH_PORT" --exclude=node_modules --exclude=vendor . $SSH_USERNAME@$SSH_HOST:/ruta/destino
+          sshpass -p "$SSH_PASSWORD" ssh -o StrictHostKeyChecking=no -p $SSH_PORT $SSH_USERNAME@$SSH_HOST "mkdir -p /ruta/destino"
+          sshpass -p "$SSH_PASSWORD" rsync -avz --bwlimit=1000 -e "ssh -o StrictHostKeyChecking=no -p $SSH_PORT" --exclude=node_modules --exclude=vendor . $SSH_USERNAME@$SSH_HOST:/ruta/destino
           sshpass -p "$SSH_PASSWORD" ssh -o StrictHostKeyChecking=no -p $SSH_PORT $SSH_USERNAME@$SSH_HOST << 'EOF'
-            cd /ruta/destino
+            cd /domains/moisespulido.com
             composer install --no-dev --no-interaction --prefer-dist --optimize-autoloader
             npm install
             npm run build
