--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,6 +39,7 @@ jobs:
           SSH_USERNAME: ${{ secrets.SSH_USERNAME }}
           SSH_PASSWORD: ${{ secrets.SSH_PASSWORD }}
         run: |
+          sshpass -p "$SSH_PASSWORD" ssh -o StrictHostKeyChecking=no -p $SSH_PORT $SSH_USERNAME@$SSH_HOST "chmod -R 775 /domains/moisespulido.com"
           sshpass -p "$SSH_PASSWORD" rsync -avz --bwlimit=200 -e "ssh -o StrictHostKeyChecking=no -p $SSH_PORT" --exclude=node_modules --exclude=vendor . $SSH_USERNAME@$SSH_HOST:/domains/moisespulido.com
           sshpass -p "$SSH_PASSWORD" ssh -o StrictHostKeyChecking=no -p $SSH_PORT $SSH_USERNAME@$SSH_HOST << 'EOF'
             cd /domains/moisespulido.com
